packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__with_account.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

None

Diagnostics:

None

AuxData:

None
