packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__with_inner_custom_type.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

None

Diagnostics:

====
Error: Inner custom types are not supported yet.
====

AuxData:

None
